Actualiza versiones de Spring Boot a 3.4.2 y modifica configuraciones de propiedades en varios microservicios